--- a/latex/Thesis/citations.bib
+++ b/latex/Thesis/citations.bib
@@ -172,3 +172,62 @@
     pages="430--448",
     isbn="978-3-540-31870-5"
 }
+
+@inproceedings{wang2005break,
+  title={How to break MD5 and other hash functions},
+  author={Wang, Xiaoyun and Yu, Hongbo},
+  booktitle={Annual international conference on the theory and applications of cryptographic techniques},
+  pages={19--35},
+  year={2005},
+  organization={Springer}
+}
+
+@inproceedings{wang2005efficient,
+  title={Efficient collision search attacks on SHA-0},
+  author={Wang, Xiaoyun and Yu, Hongbo and Yin, Yiqun Lisa},
+  booktitle={Annual International Cryptology Conference},
+  pages={1--16},
+  year={2005},
+  organization={Springer}
+}
+
+@inproceedings{wang2005finding,
+  title={Finding collisions in the full SHA-1},
+  author={Wang, Xiaoyun and Yin, Yiqun Lisa and Yu, Hongbo},
+  booktitle={Annual international cryptology conference},
+  pages={17--36},
+  year={2005},
+  organization={Springer}
+}
+
+@misc{aumasson2008sha,
+  title={SHA-3 proposal BLAKE. Submission to NIST},
+  author={Aumasson, Jean-Philippe and Henzen, Luca and Meier, Willi and Phan, RCW},
+  journal={2012-01-01]. http:∥ 131002. net/blake},
+  year={2008}
+}
+
+@article{gauravaram2011s,
+  title={S. ren S},
+  author={Gauravaram, P and Knudsen, LR and Matusiewicz, K and Mendel, F and Rechberger, C and Schl{\"a}ffer, M},
+  journal={Thomsen,“Gr{\o}stl--a SHA-3 candidate,” Submission to NIST (Round 3)},
+  year={2011}
+}
+
+@article{wu2011hash,
+  title={The hash function JH},
+  author={Wu, Hongjun},
+  journal={Submission to NIST (round 3)},
+  volume={6},
+  year={2011}
+}
+
+@misc{bertonikeccak,
+  title={Keccak Specifications. Submission to NIST (Round 3)(2011)},
+  author={Bertoni, Guido and Daemen, Joan and Peeters, Michael and Van Assche, Gilles}
+}
+
+@misc{fergusonskein,
+  title={The Skein hash function family. Submission to NIST (Round 3)(2010)},
+  author={Ferguson, Niels and Lucks, Stefan and Schneier, Bruce and Whiting, Doug and Bellare, Mihir and Kohno, Tadayoshi and Callas, Jon and Walker, Jesse}
+}
